# python-OCIUsageCost

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  deploy.sh  docker-compose.yaml  oci_usage_cost.py  pyproject.toml  requirements.txt
.github/workflows/: docker_publish.yaml
